Adjusted Color and test

--- a/fiit-animation-scale/index.html
+++ b/fiit-animation-scale/index.html
@@ -21,7 +21,7 @@
 
         <div class="slider-single animate-1">
           <div class=''> 
-             <p class='boxes box1'>You're in a zone </p>
+             <p class='boxes box1'>You're in the zone </p>
           </div>
           <div class='sub-box'> 
             <span>keep pushing it</span>
@@ -39,7 +39,7 @@
 
           <div class="slider-single animate-3">
             <div class=''> 
-                <p class='boxes box3'>You're in a zone </p>
+                <p class='boxes box3'>10 seconds to go </p>
             </div>
           </div>
         
