Updated styles and animation

--- a/fiit-animation-scale/index.html
+++ b/fiit-animation-scale/index.html
@@ -19,7 +19,7 @@
     <div class="slider-container">
       <div class="slider-content">
 
-        <div class="slider-single animate-1">
+        <div class="slider-single">
           <div class=''> 
              <p class='boxes box1'>You're in the zone </p>
           </div>
@@ -28,7 +28,7 @@
           </div>
         </div>
 
-        <div class="slider-single animate-2">
+        <div class="slider-single">
           <div class=''> 
               <p class='boxes box2'>new pb</p>
           </div>
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-          <div class="slider-single animate-3">
+          <div class="slider-single">
             <div class=''> 
                 <p class='boxes box3'>10 seconds to go </p>
             </div>
